# db-synth

./: .gitignore  CMakeLists.txt  README.md  synth-datagen.yml
.github/workflows/: assets.yml  dist.yml  kicad.yaml  main.yml  pages.yml
3d-models/: enclosure-back.scad  enclosure-back.stl  enclosure-front.scad  enclosure-front.stl  enclosure.scad  enclosure.stl  settings.scad
3d-models/lib/: audiojack.scad
build-aux/: bdist-readme.sh  binaries.sh  ibom.sh  midi.sh  pcb-revision.sh  version.sh
cmake/cpack/: install_version.cmake.in
cmake/cpack/files/: LICENSE.txt
docs/: 00_index.md  10_hardware.md  20_firmware.md  30_midi.md
firmware/: CMakeLists.txt  adsr-data.h  adsr.c  adsr.h  amplifier.c  amplifier.h  filter-data.h  filter.c  filter.h  generate.py  main-data.h  main.c  midi-data.h  midi.c  midi.h  oled-data.h  oled-font.h  oled.c  oled.h  oscillator-data.h  oscillator.c  oscillator.h  phase.c  phase.h  screen-data.h  screen.c  screen.h  settings.c  settings.h
firmware/data/: font.py
pcb/: config.yml  db-synth.kicad_pcb  db-synth.kicad_pro  db-synth.kicad_sch  fp-lib-table  sym-lib-table
pcb/lib/: AVR128DB28.kicad_sym  LICENSE  MCP1702-3302E.kicad_sym
pcb/lib/db-synth.pretty/: C_TDK_FA26.kicad_mod  C_TDK_FA28.kicad_mod  JST_XH_B2B-XH-A_PinSocket_1x02_P2.50mm_Vertical.kicad_mod  JST_XH_B3B-XH-A_PinSocket_1x03_P2.50mm_Vertical.kicad_mod  R_YAGEO_MFR-25FTE52_Horizontal.kicad_mod  TestPoint_Keystone_5001_Miniature.kicad_mod
website/: blogcfile
website/charts/: adsr-data.html  filter-data.html  oscillator-data.html
website/content/: index.txt  midi.txt
website/content/firmware/: build.txt  program.txt
website/content/hardware/: build.txt  enclosure.txt  pcb.txt
website/templates/: main.html
